--- a/plant-control.ioc
+++ b/plant-control.ioc
@@ -23,9 +23,10 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM3
-Mcu.IP6=USART3
-Mcu.IP7=USB_OTG_FS
-Mcu.IPNb=8
+Mcu.IP6=TIM4
+Mcu.IP7=USART3
+Mcu.IP8=USB_OTG_FS
+Mcu.IPNb=9
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -54,13 +55,14 @@ Mcu.Pin29=PB7
 Mcu.Pin3=PH0/OSC_IN
 Mcu.Pin30=VP_SYS_VS_Systick
 Mcu.Pin31=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin32=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
 Mcu.Pin6=PA0/WKUP
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA7
-Mcu.PinsNb=32
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -78,6 +80,8 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA0/WKUP.Signal=ADCx_IN0
 PA1.GPIOParameters=GPIO_Label
@@ -324,7 +328,11 @@ SH.GPXTI13.ConfNb=1
 TIM3.IPParameters=Prescaler,Period
 TIM3.Period=999
 TIM3.Prescaler=95
-USART3.IPParameters=VirtualMode-Asynchronous
+TIM4.IPParameters=Period,Prescaler
+TIM4.Period=9999
+TIM4.Prescaler=9599
+USART3.BaudRate=9600
+USART3.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
@@ -332,6 +340,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=NUCLEO-F767ZI
 boardIOC=true
 isbadioc=false
