move display to i2c2

--- a/plant-control.ioc
+++ b/plant-control.ioc
@@ -15,15 +15,14 @@ ADC1.ScanConvMode=ADC_SCAN_ENABLE
 ADC1.master=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.I2C_Speed_Mode=I2C_Standard
-I2C1.IPParameters=Timing,I2C_Speed_Mode
-I2C1.Timing=0x20303E5D
+I2C2.IPParameters=Timing
+I2C2.Timing=0x20303E5D
 KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
 Mcu.IP10=USB_OTG_FS
-Mcu.IP2=I2C1
+Mcu.IP2=I2C2
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
@@ -36,41 +35,41 @@ Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14/OSC32_IN
 Mcu.Pin1=PC15/OSC32_OUT
-Mcu.Pin10=PC5
-Mcu.Pin11=PB0
-Mcu.Pin12=PF13
-Mcu.Pin13=PE9
-Mcu.Pin14=PE11
-Mcu.Pin15=PB13
-Mcu.Pin16=PB14
-Mcu.Pin17=PD8
-Mcu.Pin18=PD9
-Mcu.Pin19=PG6
-Mcu.Pin2=PH0/OSC_IN
-Mcu.Pin20=PG7
-Mcu.Pin21=PA8
-Mcu.Pin22=PA9
-Mcu.Pin23=PA10
-Mcu.Pin24=PA11
-Mcu.Pin25=PA12
-Mcu.Pin26=PA13
-Mcu.Pin27=PA14
-Mcu.Pin28=PG11
-Mcu.Pin29=PG13
-Mcu.Pin3=PH1/OSC_OUT
-Mcu.Pin30=PB3
-Mcu.Pin31=PB6
-Mcu.Pin32=PB7
-Mcu.Pin33=PB9
+Mcu.Pin10=PA7
+Mcu.Pin11=PC4
+Mcu.Pin12=PC5
+Mcu.Pin13=PB0
+Mcu.Pin14=PF13
+Mcu.Pin15=PE9
+Mcu.Pin16=PE11
+Mcu.Pin17=PB13
+Mcu.Pin18=PB14
+Mcu.Pin19=PD8
+Mcu.Pin2=PF0
+Mcu.Pin20=PD9
+Mcu.Pin21=PG6
+Mcu.Pin22=PG7
+Mcu.Pin23=PA8
+Mcu.Pin24=PA9
+Mcu.Pin25=PA10
+Mcu.Pin26=PA11
+Mcu.Pin27=PA12
+Mcu.Pin28=PA13
+Mcu.Pin29=PA14
+Mcu.Pin3=PF1
+Mcu.Pin30=PG11
+Mcu.Pin31=PG13
+Mcu.Pin32=PB3
+Mcu.Pin33=PB7
 Mcu.Pin34=VP_SYS_VS_Systick
 Mcu.Pin35=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin36=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin4=PC1
-Mcu.Pin5=PA0/WKUP
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA7
-Mcu.Pin9=PC4
+Mcu.Pin4=PH0/OSC_IN
+Mcu.Pin5=PH1/OSC_OUT
+Mcu.Pin6=PC1
+Mcu.Pin7=PA0/WKUP
+Mcu.Pin8=PA1
+Mcu.Pin9=PA2
 Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -83,7 +82,6 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -158,14 +156,10 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
 PB7.Signal=GPIO_Output
-PB9.Mode=I2C
-PB9.Signal=I2C1_SDA
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
@@ -196,6 +190,10 @@ PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
 PE11.Signal=S_TIM1_CH2
 PE9.Signal=S_TIM1_CH1
+PF0.Mode=I2C
+PF0.Signal=I2C2_SDA
+PF1.Mode=I2C
+PF1.Signal=I2C2_SCL
 PF13.GPIOParameters=GPIO_PuPd
 PF13.GPIO_PuPd=GPIO_PULLUP
 PF13.Locked=true
@@ -252,7 +250,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_TIM3_Init-TIM3-false-HAL-true,3-MX_TIM4_Init-TIM4-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_GPIO_Init-GPIO-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_TIM3_Init-TIM3-false-HAL-true,3-MX_TIM4_Init-TIM4-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_GPIO_Init-GPIO-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
