add lamp control (on/off)

--- a/plant-control.ioc
+++ b/plant-control.ioc
@@ -49,28 +49,29 @@ Mcu.Pin2=PF0
 Mcu.Pin20=PD9
 Mcu.Pin21=PG6
 Mcu.Pin22=PG7
-Mcu.Pin23=PA8
-Mcu.Pin24=PA9
-Mcu.Pin25=PA10
-Mcu.Pin26=PA11
-Mcu.Pin27=PA12
-Mcu.Pin28=PA13
-Mcu.Pin29=PA14
+Mcu.Pin23=PC8
+Mcu.Pin24=PA8
+Mcu.Pin25=PA9
+Mcu.Pin26=PA10
+Mcu.Pin27=PA11
+Mcu.Pin28=PA12
+Mcu.Pin29=PA13
 Mcu.Pin3=PF1
-Mcu.Pin30=PG11
-Mcu.Pin31=PG13
-Mcu.Pin32=PB3
-Mcu.Pin33=PB7
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin35=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin36=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin30=PA14
+Mcu.Pin31=PG11
+Mcu.Pin32=PG13
+Mcu.Pin33=PB3
+Mcu.Pin34=PB7
+Mcu.Pin35=VP_SYS_VS_Systick
+Mcu.Pin36=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin4=PH0/OSC_IN
 Mcu.Pin5=PH1/OSC_OUT
 Mcu.Pin6=PC1
 Mcu.Pin7=PA0/WKUP
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=37
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -178,6 +179,7 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=RMII_RXD1 [LAN8742A-CZ-TR_RXD1]
 PC5.Locked=true
 PC5.Signal=ETH_RXD1
+PC8.Signal=S_TIM3_CH3
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
 PD8.Locked=true
@@ -345,12 +347,16 @@ SH.S_TIM1_CH1.0=TIM1_CH1,Encoder_Interface
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,Encoder_Interface
 SH.S_TIM1_CH2.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
+SH.S_TIM3_CH3.ConfNb=1
 TIM1.EncoderMode=TIM_ENCODERMODE_TI12
 TIM1.IPParameters=EncoderMode,Period
 TIM1.Period=403
-TIM3.IPParameters=Prescaler,Period
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.IPParameters=Prescaler,Period,Channel-PWM Generation3 CH3,Pulse-PWM Generation3 CH3
 TIM3.Period=999
 TIM3.Prescaler=95
+TIM3.Pulse-PWM\ Generation3\ CH3=500
 TIM4.IPParameters=Period,Prescaler
 TIM4.Period=9999
 TIM4.Prescaler=9599
