--- a/plant-control.ioc
+++ b/plant-control.ioc
@@ -15,22 +15,25 @@ ADC1.ScanConvMode=ADC_SCAN_ENABLE
 ADC1.master=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.IPParameters=Timing
+I2C1.Timing=0x20303E5D
 I2C2.IPParameters=Timing
 I2C2.Timing=0x20303E5D
 KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
-Mcu.IP10=USB_OTG_FS
-Mcu.IP2=I2C2
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM1
-Mcu.IP7=TIM3
-Mcu.IP8=TIM4
-Mcu.IP9=USART3
-Mcu.IPNb=11
+Mcu.IP10=USART3
+Mcu.IP11=USB_OTG_FS
+Mcu.IP2=I2C1
+Mcu.IP3=I2C2
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM1
+Mcu.IP8=TIM3
+Mcu.IP9=TIM4
+Mcu.IPNb=12
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14/OSC32_IN
@@ -61,17 +64,19 @@ Mcu.Pin30=PA14
 Mcu.Pin31=PG11
 Mcu.Pin32=PG13
 Mcu.Pin33=PB3
-Mcu.Pin34=PB7
-Mcu.Pin35=VP_SYS_VS_Systick
-Mcu.Pin36=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin37=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin34=PB6
+Mcu.Pin35=PB7
+Mcu.Pin36=PB9
+Mcu.Pin37=VP_SYS_VS_Systick
+Mcu.Pin38=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin39=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin4=PH0/OSC_IN
 Mcu.Pin5=PH1/OSC_OUT
 Mcu.Pin6=PC1
 Mcu.Pin7=PA0/WKUP
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=38
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -83,6 +88,7 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -157,10 +163,14 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
