--- a/plant-control.ioc
+++ b/plant-control.ioc
@@ -23,17 +23,18 @@ KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
-Mcu.IP10=USART3
-Mcu.IP11=USB_OTG_FS
+Mcu.IP10=TIM4
+Mcu.IP11=USART3
+Mcu.IP12=USB_OTG_FS
 Mcu.IP2=I2C1
 Mcu.IP3=I2C2
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
 Mcu.IP7=TIM1
-Mcu.IP8=TIM3
-Mcu.IP9=TIM4
-Mcu.IPNb=12
+Mcu.IP8=TIM2
+Mcu.IP9=TIM3
+Mcu.IPNb=13
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14/OSC32_IN
@@ -68,15 +69,16 @@ Mcu.Pin34=PB6
 Mcu.Pin35=PB7
 Mcu.Pin36=PB9
 Mcu.Pin37=VP_SYS_VS_Systick
-Mcu.Pin38=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin39=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin39=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin4=PH0/OSC_IN
+Mcu.Pin40=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin5=PH1/OSC_OUT
 Mcu.Pin6=PC1
 Mcu.Pin7=PA0/WKUP
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=40
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -96,6 +98,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM1_BRK_TIM9_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -262,7 +265,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_TIM3_Init-TIM3-false-HAL-true,3-MX_TIM4_Init-TIM4-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_GPIO_Init-GPIO-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_TIM3_Init-TIM3-false-HAL-true,3-MX_TIM4_Init-TIM4-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_GPIO_Init-GPIO-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -362,6 +365,9 @@ SH.S_TIM3_CH3.ConfNb=1
 TIM1.EncoderMode=TIM_ENCODERMODE_TI12
 TIM1.IPParameters=EncoderMode,Period
 TIM1.Period=403
+TIM2.IPParameters=Prescaler,Period
+TIM2.Period=999
+TIM2.Prescaler=19199
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.IPParameters=Prescaler,Period,Channel-PWM Generation3 CH3,Pulse-PWM Generation3 CH3
 TIM3.Period=999
@@ -377,6 +383,8 @@ USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
