--- a/plant-control.ioc
+++ b/plant-control.ioc
@@ -43,42 +43,43 @@ Mcu.Pin10=PA7
 Mcu.Pin11=PC4
 Mcu.Pin12=PC5
 Mcu.Pin13=PB0
-Mcu.Pin14=PF13
-Mcu.Pin15=PE9
-Mcu.Pin16=PE11
-Mcu.Pin17=PB13
-Mcu.Pin18=PB14
-Mcu.Pin19=PD8
+Mcu.Pin14=PB1
+Mcu.Pin15=PF13
+Mcu.Pin16=PE9
+Mcu.Pin17=PE11
+Mcu.Pin18=PB13
+Mcu.Pin19=PB14
 Mcu.Pin2=PF0
-Mcu.Pin20=PD9
-Mcu.Pin21=PG6
-Mcu.Pin22=PG7
-Mcu.Pin23=PC8
-Mcu.Pin24=PA8
-Mcu.Pin25=PA9
-Mcu.Pin26=PA10
-Mcu.Pin27=PA11
-Mcu.Pin28=PA12
-Mcu.Pin29=PA13
+Mcu.Pin20=PD8
+Mcu.Pin21=PD9
+Mcu.Pin22=PG6
+Mcu.Pin23=PG7
+Mcu.Pin24=PC8
+Mcu.Pin25=PA8
+Mcu.Pin26=PA9
+Mcu.Pin27=PA10
+Mcu.Pin28=PA11
+Mcu.Pin29=PA12
 Mcu.Pin3=PF1
-Mcu.Pin30=PA14
-Mcu.Pin31=PG11
-Mcu.Pin32=PG13
-Mcu.Pin33=PB3
-Mcu.Pin34=PB6
-Mcu.Pin35=PB7
-Mcu.Pin36=PB9
-Mcu.Pin37=VP_SYS_VS_Systick
-Mcu.Pin38=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin39=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin30=PA13
+Mcu.Pin31=PA14
+Mcu.Pin32=PG11
+Mcu.Pin33=PG13
+Mcu.Pin34=PB3
+Mcu.Pin35=PB6
+Mcu.Pin36=PB7
+Mcu.Pin37=PB9
+Mcu.Pin38=VP_SYS_VS_Systick
+Mcu.Pin39=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin4=PH0/OSC_IN
-Mcu.Pin40=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin40=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin41=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin5=PH1/OSC_OUT
 Mcu.Pin6=PC1
 Mcu.Pin7=PA0/WKUP
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=41
+Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -154,6 +155,7 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LD1 [Green]
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB1.Signal=S_TIM3_CH4
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
 PB13.Locked=true
@@ -265,7 +267,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_TIM3_Init-TIM3-false-HAL-true,3-MX_TIM4_Init-TIM4-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_GPIO_Init-GPIO-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_TIM3_Init-TIM3-false-HAL-true,3-MX_TIM4_Init-TIM4-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_GPIO_Init-GPIO-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -362,6 +364,8 @@ SH.S_TIM1_CH2.0=TIM1_CH2,Encoder_Interface
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
 SH.S_TIM3_CH3.ConfNb=1
+SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
+SH.S_TIM3_CH4.ConfNb=1
 TIM1.EncoderMode=TIM_ENCODERMODE_TI12
 TIM1.IPParameters=EncoderMode,Period
 TIM1.Period=403
@@ -369,10 +373,12 @@ TIM2.IPParameters=Prescaler,Period
 TIM2.Period=999
 TIM2.Prescaler=19199
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM3.IPParameters=Prescaler,Period,Channel-PWM Generation3 CH3,Pulse-PWM Generation3 CH3
+TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM3.IPParameters=Prescaler,Period,Channel-PWM Generation3 CH3,Pulse-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Pulse-PWM Generation4 CH4
 TIM3.Period=999
 TIM3.Prescaler=95
 TIM3.Pulse-PWM\ Generation3\ CH3=500
+TIM3.Pulse-PWM\ Generation4\ CH4=1000
 TIM4.IPParameters=Period,Prescaler
 TIM4.Period=9999
 TIM4.Prescaler=9599
